--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+repomix-output.txt
+
 # build output
 dist/
 .output/
@@ -10,7 +12,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
 
 # environment variables
 .env
