--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.50.1",
     "@types/node": "^22.13.4",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1"
