--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "goude-github-io",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
