--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 name: Run Tests
 
-# on: [push, pull_request]
-on: workflow_dispatch
+on: [push, pull_request]
+#on: workflow_dispatch
 
 jobs:
   test:
