fix some warnings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "exclude": ["src/pages/hello.astro", "src/pages/ft-2025.astro"]
 }
