--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "goude-github-io",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build && node scripts/beautify-html.js",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@playwright/test": "^1.50.1",
     "@types/node": "^22.13.4",
+    "js-beautify": "^1.15.4",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1"
   }
