--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "goude-github-io",
-  "version": "1.5.1",
+  "version": "1.6.0",
   "type": "module",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build && node scripts/beautify-html.js",
+    "prepare-readme": "node scripts/prepare-readme.js",
+    "dev": "npm run prepare-readme && astro dev",
+    "start": "npm run prepare-readme && astro dev",
+    "build": "npm run prepare-readme && astro check && astro build && node scripts/beautify-html.js",
     "preview": "astro preview",
     "astro": "astro"
   },
