--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goude-github-io",
-  "version": "1.9.1",
+  "version": "1.10.0",
   "type": "module",
   "scripts": {
     "prepare-readme": "node scripts/prepare-readme.js",
@@ -8,7 +8,14 @@
     "start": "npm run prepare-readme && astro dev",
     "build": "npm run prepare-readme && astro check && astro build && node scripts/beautify-html.js",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
+    "check": "npm run lint && npm run format:check && npm run test",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
