--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "goude-github-io",
-  "version": "1.10.4",
+  "version": "1.10.5",
   "type": "module",
   "scripts": {
     "prepare-readme": "node scripts/prepare-readme.js",
     "dev": "npm run prepare-readme && astro dev",
-    "start": "npm run prepare-readme && astro dev",
+    "start": "npm run prepare-readme && astro dev --host 0.0.0.0",
     "build": "npm run prepare-readme && astro check && astro build && node scripts/beautify-html.js",
     "preview": "astro preview",
     "astro": "astro",
