--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "check": "npm run lint && npm run format:check && npm run test",
-    "test": "vitest run --coverage",
-    "test:watch": "vitest --watch"
+    "test": "node test/fileUniqueness.js && npx playwright test"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.5",
