--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,36 +1,32 @@
-name: Run Tests
+name: Test
 
-on: [push, pull_request]
-#on: workflow_dispatch
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.50.1-jammy
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: 22
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build site
+      - name: Build
         run: npm run build
 
-      - name: Run file uniqueness test
+      - name: Check file uniqueness
         run: node test/fileUniqueness.js
-
-      - name: Start preview server
-        run: npm run preview &
-
-      - name: Wait for server to be ready
-        run: sleep 10
 
       - name: Run Playwright tests
         run: npx playwright test
