--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goude-site",
   "type": "module",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "scripts": {
     "dev": "astro dev",
     "build": "astro check && astro build",
@@ -22,7 +22,8 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
-    "astro": "^5.16.6"
+    "astro": "^5.16.6",
+    "marked": "^17.0.1"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
