--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format:check": "prettier --check .",
     "precommit": "lint-staged && astro check",
     "prepush": "npm run lint && npm run typecheck && npm run build",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{ts,astro}": [
