--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
     "@astrojs/language-server": "^2.16.3",
+    "@eslint/js": "^10.0.1",
     "@types/node": "^25.3.0",
     "@types/youtube": "^0.1.2",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
@@ -48,6 +49,7 @@
     "postcss-custom-properties": "^15.0.1",
     "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0"
   }
 }
